--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -291,75 +291,30 @@
 					<div class="main-menu">
 						<nav>
 							<ul>
-								<li class="active"><a href="/">{{trans("Plentymarket::Common.home")}}</a>
-								</li>
-								<li class="menu-item-has-children"><a href="shop-left-sidebar.html">Shop</a>
-									<ul class="sub-menu">
-										<li class="menu-item-has-children"><a href="shop-4-column.html">shop grid</a>
-											<ul class="sub-menu">
-												<li><a href="shop-3-column.html">shop 3 column</a></li>
-												<li><a href="shop-4-column.html">shop 4 column</a></li>
-												<li><a href="shop-left-sidebar.html">shop left sidebar</a></li>
-												<li><a href="shop-right-sidebar.html">shop right sidebar</a></li>
-											</ul>
-										</li>
-										<li class="menu-item-has-children"><a href="shop-list.html">shop List</a>
-											<ul class="sub-menu">
-												<li><a href="shop-list.html">shop List</a></li>
-												<li><a href="shop-list-left-sidebar.html">shop List Left Sidebar</a>
-												</li>
-												<li><a href="shop-list-right-sidebar.html">shop List Right Sidebar</a>
-												</li>
-											</ul>
-										</li>
-										<li class="menu-item-has-children"><a href="single-product.html">Single
-										                                                                 Product</a>
-											<ul class="sub-menu">
-												<li><a href="single-product.html">Single Product</a></li>
-												<li><a href="single-product-variable.html">Single Product variable</a>
-												</li>
-												<li><a href="single-product-affiliate.html">Single Product affiliate</a>
-												</li>
-												<li><a href="single-product-group.html">Single Product group</a></li>
-												<li><a href="single-product-tabstyle-2.html">Tab Style 2</a></li>
-												<li><a href="single-product-tabstyle-3.html">Tab Style 3</a></li>
-												<li><a href="single-product-gallery-left.html">Gallery Left</a></li>
-												<li><a href="single-product-gallery-right.html">Gallery Right</a></li>
-												<li><a href="single-product-sticky-left.html">Sticky Left</a></li>
-												<li><a href="single-product-sticky-right.html">Sticky Right</a></li>
-												<li><a href="single-product-slider-box.html">Slider Box</a></li>
 
-											</ul>
-										</li>
-									</ul>
-								</li>
+								<li class="active"><a href="/">{{trans("Plentymarket::Common.home")}}</a></li>
 
-								<li class="menu-item-has-children"><a href="#">PAGES</a>
-									<ul class="mega-menu three-column">
-										<li><a href="#">Column One</a>
-											<ul>
-												<li><a href="cart.html">Cart</a></li>
-												<li><a href="checkout.html">Checkout</a></li>
-												<li><a href="wishlist.html">Wishlist</a></li>
+								{%for key,value in category%}
+									<li class="menu-item-has-children">
+										<a href="/index/product_list_category/{{value.id}}">{{value.details.0.name}}</a>
+										<ul class="sub-menu">
 
-											</ul>
-										</li>
-										<li><a href="#">Column Two</a>
-											<ul>
-												<li><a href="/account/index">My Account</a></li>
-												<li><a href="/index/login_register">Login Register</a></li>
-												<li><a href="/index/faq">FAQ</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Column Three</a>
-											<ul>
-												<li><a href="compare.html">Compare</a></li>
-												<li><a href="contact.html">Contact</a></li>
-												<li><a href="about.html">About Us</a></li>
-											</ul>
-										</li>
-									</ul>
-								</li>
+											{%for value2 in value.children%}
+												<li class="menu-item-has-children">
+													<a href="/index/product_list_category/{{value2.id}}">{{value2.details.0.name}}</a>
+													<ul class="sub-menu">
+														{%for value3 in value2.children%}
+															<li>
+																<a href="/index/product_list_category/{{value3.id}}">{{value3.details.0.name}}</a>
+															</li>
+														{%endfor%}
+													</ul>
+												</li>
+											{%endfor%}
+										</ul>
+									</li>
+								{%endfor%}
+
 								<li class="menu-item-has-children"><a href="#">BLOG</a>
 									<ul class="sub-menu">
 										<li><a href="blog-3-column.html">Blog 3 column</a></li>
@@ -376,7 +331,9 @@
 										<li><a href="blog-post-video-format.html">Blog Post Video Format</a></li>
 									</ul>
 								</li>
+
 								<li><a href="/index/contact">{{trans('Plentymarket::Common.contact')}}</a></li>
+
 							</ul>
 						</nav>
 					</div>
