--- a/resources/views/index/blog.twig
+++ b/resources/views/index/blog.twig
@@ -8,214 +8,13 @@
 <div class="blog-page-container mb-80">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 order-2 order-lg-1">
-				<!--=======  sidebar  =======-->
-
-				<div class="sidebar-container shop-sidebar-container">
-					<!--=======  single widget  =======-->
-
-					<div class="single-sidebar-widget mb-30">
-						<h3 class="sidebar-title">Search</h3>
-						<!--=======  search box  =======-->
-
-						<div class="sidebar-search-box">
-							<input type="search" placeholder="Search">
-							<button type="submit"><i class="fa fa-search"></i></button>
-						</div>
-
-						<!--=======  End of search box  =======-->
-					</div>
-
-					<!--=======  End of single widget  =======-->
-
-					<!--=======  single widget  =======-->
-
-					<div class="single-sidebar-widget mb-30">
-						<h3 class="sidebar-title">Categories</h3>
-						<!--=======  category dropdown  =======-->
-						<ul class="category-dropdown">
-							<li class="has-children">
-								<a href="shop-left-sidebar.html">Living Chairs</a>
-								<ul>
-									<li><a href="shop-left-sidebar.html">Sofas</a></li>
-									<li><a href="shop-left-sidebar.html">Armchairs</a></li>
-									<li><a href="shop-left-sidebar.html">Desk Chairs</a></li>
-									<li><a href="shop-left-sidebar.html">Dining Chairs &amp; Benches</a></li>
-								</ul>
-							</li>
-							<li class="has-children">
-								<a href="shop-left-sidebar.html">Sofa</a>
-								<ul>
-									<li><a href="shop-left-sidebar.html">Sofas</a></li>
-									<li><a href="shop-left-sidebar.html">Armchairs</a></li>
-									<li><a href="shop-left-sidebar.html">Desk Chairs</a></li>
-									<li><a href="shop-left-sidebar.html">Dining Chairs &amp; Benches</a></li>
-								</ul>
-							</li>
-							<li><a href="shop-left-sidebar.html">Storage</a></li>
-						</ul>
-						<!--=======  End of category dropdown  =======-->
-					</div>
-
-					<!--=======  End of single widget  =======-->
-
-					<!--=======  single widget  =======-->
-
-					<div class="single-sidebar-widget mb-30">
-						<h3 class="sidebar-title">Recent Posts</h3>
-						<!--=======  block container  =======-->
-
-						<div class="block-container">
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block d-flex">
-								<div class="image">
-									<a href="blog-post-image-gallery.html">
-										<img src="assets/images/blog-image/small-02.jpg" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><a href="blog-post-image-gallery.html">How to improve furniture quality</a>
-										<span>APRIL 24, 2018</span></p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block d-flex">
-								<div class="image">
-									<a href="blog-post-audio-format.html">
-										<img src="assets/images/blog-image/small-03.jpg" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><a href="blog-post-audio-format.html">101 ideas for furniture</a> <span>APRIL 24, 2018</span>
-									</p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block d-flex">
-								<div class="image">
-									<a href="blog-post-video-format.html">
-										<img src="assets/images/blog-image/small-04.jpg" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><a href="blog-post-video-format.html">No more mistakes with furniture</a> <span>APRIL 24, 2018</span>
-									</p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-						</div>
-
-						<!--=======  End of block container  =======-->
-					</div>
-
-					<!--=======  End of single widget  =======-->
-
-					<!--=======  single widget  =======-->
-
-					<div class="single-sidebar-widget mb-30">
-						<h3 class="sidebar-title">Recent Comments</h3>
-
-						<!--=======  block container  =======-->
-
-						<div class="block-container">
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block comment-block d-flex">
-								<div class="image">
-									<a href="blog-post-image-format.html">
-										<img src="assets/images/blog-image/comment-icon.png" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><span>Admin Says</span> <a href="blog-post-image-format.html">The biggest lie in
-											furniture</a></p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block comment-block d-flex">
-								<div class="image">
-									<a href="blog-post-image-gallery.html">
-										<img src="assets/images/blog-image/comment-icon.png" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><span>Admin Says</span><a href="blog-post-image-gallery.html">How to improve
-											furniture quality</a></p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block comment-block d-flex">
-								<div class="image">
-									<a href="blog-post-audio-format.html">
-										<img src="assets/images/blog-image/comment-icon.png" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><span>Admin Says</span><a href="blog-post-audio-format.html">101 ideas for
-											furniture</a></p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-							<!--=======  single block  =======-->
-
-							<div class="single-block comment-block d-flex">
-								<div class="image">
-									<a href="blog-post-video-format.html">
-										<img src="assets/images/blog-image/comment-icon.png" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="content">
-									<p><span>Admin Says</span><a href="blog-post-video-format.html">No more mistakes
-											with furniture</a></p>
-								</div>
-							</div>
-
-							<!--=======  End of single block  =======-->
-
-						</div>
-
-						<!--=======  End of block container  =======-->
-
-					</div>
-
-					<!--=======  End of single widget  =======-->
-
-				</div>
-
-				<!--=======  End of sidebar  =======-->
-			</div>
-			<div class="col-lg-9 order-1 order-lg-2">
+			<div class="col-lg-12 order-1 order-lg-2">
 				<!--=======  blog post container  =======-->
 
 				<div class="blog-single-post-container mb-80">
 
 					<!--=======  post title  =======-->
-
-					<h3 class="post-title">{{blog.post.title}}</h3>
-
+					<h3 class="post-title">{{blog.data.post.title}}</h3>
 					<!--=======  End of post title  =======-->
 
 					<!--=======  Post meta  =======-->
@@ -224,23 +23,22 @@
 							<span class="separator">/</span>
 							<span><i class="fa fa-calendar"></i> Posted On: {{blog.createdAt}}</span></p>
 					</div>
-
 					<!--=======  End of Post meta  =======-->
 
-					<!--=======  Post media  =======-->
-
-					<div class="single-blog-post-media mb-xs-20">
-						<div class="image">
-							<img src="{{blog.data.images.0}}" class="img-fluid" alt="">
+					{%if blog.data.images|length > 0%}
+						<!--=======  Post media  =======-->
+						<div class="single-blog-post-media mb-xs-20">
+							<div class="image">
+								<img src="{{blog.data.images.0}}" class="img-fluid" alt="">
+							</div>
 						</div>
-					</div>
-
-					<!--=======  End of Post media  =======-->
+						<!--=======  End of Post media  =======-->
+					{%endif%}
 
 					<!--=======  Post content  =======-->
 
 					<div class="post-content mb-40">
-						{{blog.post.body}}
+						{{blog.data.post.body}}
 					</div>
 
 					<!--=======  End of Post content  =======-->
@@ -248,7 +46,7 @@
 					<!--=======  Share post area  =======-->
 
 					<div class="social-share-buttons mb-40">
-						<h3>share this post</h3>
+						<h3>{{trans('Plentymarket::WebIndexBlog.share_this_post')}}</h3>
 						<ul>
 							<li><a class="twitter"><i class="fa fa-twitter"></i></a></li>
 							<li><a class="facebook"><i class="fa fa-facebook"></i></a></li>
