--- a/resources/views/index/blog.twig
+++ b/resources/views/index/blog.twig
@@ -38,7 +38,7 @@
 					<!--=======  Post content  =======-->
 
 					<div class="post-content mb-40">
-						{{blog.data.post.body}}
+						{{blog.data.post.body | raw}}
 					</div>
 
 					<!--=======  End of Post content  =======-->
