--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -47,7 +47,7 @@
 						<h3 class="footer-title mb-20">{{footer_article_2.details.0.name}}</h3>
 						<ul>
 							{%for article in footer_article_2_list%}
-								<li><a href="#">{{article.data.post.title}}</a></li>
+								<li><a href="/index/blog/{{article.id}}">{{article.data.post.title}}</a></li>
 							{%endfor%}
 						</ul>
 					</div>
@@ -109,12 +109,14 @@
 
 					<div class="navigation-container">
 						<ul>
-							<li><a href="#">About Us</a> <span class="separator">|</span></li>
-							<li><a href="#">Blog</a> <span class="separator">|</span></li>
-							<li><a href="#">My Account</a> <span class="separator">-</span></li>
-							<li><a href="#">Order Status</a> <span class="separator">-</span></li>
-							<li><a href="#">Shipping &amp; Returns</a> <span class="separator">-</span></li>
-							<li><a href="#">Privacy Policy</a> <span class="separator">-</span></li>
+							{%for article in footer_article_2_list%}
+								<li>
+									<a href="#">About Us</a>
+									{%if !loop.last%}
+										<span class="separator">|</span>
+									{%endif%}
+								</li>
+							{%endfor%}
 							<li><a href="#">Terms &amp; Conditions</a></li>
 						</ul>
 					</div>
