--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -136,10 +136,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<!--=======  Copyright text  =======-->
-
-					<p class="copyright-text">Copyright @ 2018 <a href="http://www.bootstrapmb.com/">Pataku</a>. All
-						Rights Reserved</p>
-
+					<p class="copyright-text">{{trans('Plentymarket::Common.copyright')}}</p>
 					<!--=======  End of Copyright text  =======-->
 				</div>
 			</div>
