--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -112,7 +112,7 @@
 							{%for article in footer_article_2_list%}
 								<li>
 									<a href="#">About Us</a>
-									{%if !loop.last%}
+									{%if not loop.last%}
 										<span class="separator">|</span>
 									{%endif%}
 								</li>
